applications/taiga/base/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-back
  namespace: taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-back
  template:
    metadata:
      labels:
        app: taiga-back
    spec:
      restartPolicy: Always
      containers:
        - name: taiga-back
          image: taigaio/taiga-back:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: '256Mi'
              cpu: '500m'
            limits:
              memory: '512Mi'
              cpu: '1000m'
          volumeMounts:
            - name: taiga-static-data
              mountPath: /taiga-back/static
            - name: taiga-media-data
              mountPath: /taiga-back/media
      volumes:
        - name: taiga-static-data
          persistentVolumeClaim:
            claimName: taiga-static-data-pvc
        - name: taiga-media-data
          persistentVolumeClaim:
            claimName: taiga-media-data-pvc
