applications/taiga/base/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-db
  namespace: taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-db
  template:
    metadata:
      labels:
        app: taiga-db
    spec:
      restartPolicy: Always
      containers:
        - name: taiga-db
          image: postgres:13.16
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'
          volumeMounts:
            - name: taiga-db-pv
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: taiga-db-pv
          persistentVolumeClaim:
            claimName: taiga-db-pvc
