applications/taiga/base/deployment-events-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events-rabbitmq
  namespace: taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-events-rabbitmq
  template:
    metadata:
      labels:
        app: taiga-events-rabbitmq
    spec:
      restartPolicy: Always
      hostname: taiga-events-rabbitmq
      containers:
        - name: taiga-events-rabbitmq
          image: rabbitmq:3.8-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
          volumeMounts:
            - name: taiga-events-rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: taiga-events-rabbitmq-data
          persistentVolumeClaim:
            claimName: taiga-events-rabbitmq-data-pvc
