applications/taiga/base/deployment-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-events
  template:
    metadata:
      labels:
        app: taiga-events
    spec:
      restartPolicy: Always
      containers:
        - name: taiga-events
          image: taigaio/taiga-events:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
