applications/taiga/base/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-front
  namespace: taiga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-front
  template:
    metadata:
      labels:
        app: taiga-front
    spec:
      restartPolicy: Always
      containers:
        - name: taiga-front
          image: taigaio/taiga-front:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '400m'
