applications/taiga/base/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-gateway
  template:
    metadata:
      labels:
        app: taiga-gateway
    spec:
      containers:
        - name: taiga-gateway
          image: nginx:1.19-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: taiga-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: taiga.conf
            - name: taiga-static-data
              mountPath: /taiga/static
            - name: taiga-media-data
              mountPath: /taiga/media
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '400m'
      volumes:
        - name: taiga-conf
          configMap:
            name: taiga-config
        - name: taiga-static-data
          persistentVolumeClaim:
            claimName: taiga-static-data-pvc
        - name: taiga-media-data
          persistentVolumeClaim:
            claimName: taiga-media-data-pvc
