applications/taiga/base/front.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-front
  template:
    metadata:
      labels:
        app: taiga-front
    spec:
      containers:
        - name: taiga-front
          image: taigaio/taiga-front:latest
          ports:
            - containerPort: 80
