applications/taiga/base/rabbitmq-async.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-async-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-async-rabbitmq
  template:
    metadata:
      labels:
        app: taiga-async-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: taiga-rabbitmq-async-pvc
