applications/taiga/base/rabbitmq-events.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taiga-events-rabbitmq
  template:
    metadata:
      labels:
        app: taiga-events-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.8-management-alpine
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
          livenessProbe:
            tcpSocket:
              port: 5672
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: taiga-rabbitmq-events-pvc
