applications/taiga/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga
  namespace: taiga
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: taiga.oakdew.biz
    external-dns.alpha.kubernetes.io/target: 5860ec34-d45a-45b8-b1e4-9fefd97a59a4.cfargotunnel.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - taiga.oakdew.biz
      secretName: taiga-oakdew-cert
  rules:
    - host: taiga.oakdew.biz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taiga-gateway
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taiga-gateway
                port:
                  number: 443
